# cpp-issue-reports

./: .gitignore
conan-boost-errors/: CMakeLists.txt  cmake_generate_log.txt  conanfile.py
conan-boost-errors/include/: mytest.hpp
conan-boost-errors/src/: mytest.cpp
vs-cmake-intellisense-headeronly/: CMakeLists.txt
vs-cmake-intellisense-headeronly/include/: my-header-only.hpp
vs-cmake-intellisense-headeronly/include/subfolder/: my-header-only-sub.hpp
vs-cmake-intellisense-headeronly/src/: my-header-only-fix.cpp
vs-conan-subfolder-include/: CMakeLists.txt  conan_include.cmake  conanfile.py
vs-conan-subfolder-include/include/sample/: daemon_manager.hpp  sample.hpp
vs-conan-subfolder-include/include/sample/config/: file_config_provider.hpp
vs-conan-subfolder-include/src/: sample.cpp
